# open-texture-packer

./: .gitignore  Cargo.toml  README.md  sprite_sheet.json
.github/workflows/: release.yml  test.yml
examples/: README.md
examples/basic/output/: texture_sheet_1.css
examples/output/: texture_sheet_1.json
output/: texture_sheet_1.json
src/: constant.rs  file_io.rs  lib.rs  main.rs  sprite.rs  sprite_packer.rs  sprite_sheet.rs  texture_sheet.rs
