[package]
name = "open_texture_packer"
version = "0.1.6"
edition = "2021"
authors = ["Daisuke Takayama <info@webcyou.com>"]
description = "Open source and free Texture Packer tool written in rust."
license = "MIT"
repository = "https://github.com/webcyou-org/open-texture-packer"
homepage = "https://github.com/webcyou-org/open-texture-packer"
readme = "README.md"

[[bin]]
name = "otp"
path = "src/main.rs"

[dependencies]
image = "^0.25"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
clap = { version = "^4.5", features = ["derive"] }
