[package]
name = "open_texture_packer"
version = "0.2.2"
edition = "2021"
authors = ["Daisuke Takayama <info@webcyou.com>"]
description = "Open source and free Texture Packer tool written in rust."
license = "MIT"
repository = "https://github.com/webcyou-org/open-texture-packer"
homepage = "https://github.com/webcyou-org/open-texture-packer"
readme = "README.md"

[lib]
name = "open_texture_packer"
path = "src/lib.rs"

[[bin]]
name = "otp"
path = "src/main.rs"

[dependencies]
image = "^0.25"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
clap = { version = "^4.5", features = ["derive"] }
